crates/aranya-policy-compiler/tests/data/structs/conversion_rhs_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |     return Foo { a: 1, b: "test" } as Bar
  |                                       ^^^ struct `Bar` not defined
